<resources>
    <string name="app_name">Contacts</string>
    <string name="toggle_fav">Toggle Favorite</string>
    <string name="title_activity_template_bottom">TemplateBottomActivity</string>
    <string name="title_home">All Contacts</string>
    <string name="title_settings">Settings</string>
    <string name="title_contact_add">Add Contact</string>

    <string name="title_favorites_only">Favorites Only</string>
    <string name="title_show_all">Show All</string>

    <string name="contact_property_name">Name</string>
    <string name="contact_property_phone">Phone</string>

    <string name="title_contact_delete">Delete Contact</string>
    <string name="title_contact_save">Save Changes</string>
    <string name="title_simulate_notification">Sim Deeplink</string>

    <string name="notification_favorites_channel_name">Favorites Updates</string>
    <string name="encouragement_message_title">Stay Connected</string>
    <string name="encouragement_message_description">%1$s hasn\'t heard from you in a while.</string>

    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_button_label">Login</string>
    <string name="password_screen_label">Password</string>
    <string name="user_name_label">User Name</string>
    <string name="logout">Logout</string>


</resources>
